# fastapi-template

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README_MIGRATIONS.md  alembic.ini  main.py  pyproject.toml  readme.md
alembic/: env.py  script.py.mako
app/controllers/: __init__.py  user_controller.py
app/core/: context.py  database.py  environments.py  logger.py
app/exceptions/: AppHttpException.py  HandlerExceptions.py  __init__.py
app/middleware/: ContextMiddleware.py  LoggerMiddleware.py
app/models/: __init__.py  base.py  user.py  user_model.py
app/routes/: routes.py  test.py
app/utils/: environments.py
docs/: deployment.md  getting-started.md  project-structure.md
docs/development/: best-practices.md  pre-commit.md
docs/features/: context.md  database.md  exceptions.md  logging.md  middlewares.md
