[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.123.4",
    "itsdangerous>=2.2.0",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
